scrollbar bug

--- a/v2-mvp/app-inherit-metabase/metabase-0.44.4-src/frontend/src/metabase/web3goLayout/views/CreatePage/index.less
+++ b/v2-mvp/app-inherit-metabase/metabase-0.44.4-src/frontend/src/metabase/web3goLayout/views/CreatePage/index.less
@@ -57,5 +57,6 @@ body[arco-theme="dark"] .web3go-create-page {}
 
     .p-main {
         flex: 1;
+        overflow: auto;
     }
 }
